projet_GOCass/tests/bad/testfile-void-returns.go
package main

func foo () { return 3}

func main () {}
